paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/gcc_c11_tests/c11-align-6/sample_004/target.compile.log
error[E0428]: the name `X` is defined multiple times
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/gcc_c11_tests/c11-align-6/sample_004/target.rs:7:9
   |
 7 |         struct X {
   |         ^^^^^^^^
   |         |
   |         `X` redefined here
   |         previous definition of the type `X` here
...
19 |     check_align!(bool); // _Bool
   |     ------------------ in this macro invocation
   |
   = note: `X` must be defined only once in the type namespace of this block
   = note: this error originates in the macro `check_align` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0428`.